dataset1235/2025-2/805158916/users/3688932496/executions/2651470117_775838323.log
== RUN (2025-08-25 03:41:47)
-- CODE: 
print()
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+n2+n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:44:09)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
m = (n1+n2+n3)/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:41:38)
-- CODE: 
print("")
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+n2+n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:41:15)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+n2+n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:44:03)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
media = (n1+n2+n3)/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m)
          ^
NameError: name 'm' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(m)
          ^
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:40:13)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+ n2+ n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:40:17)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+ n2+ n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:42:09)
-- CODE: 
print()
n1 = 5
n2 = 4
n3 = 3
#media
media = n1+n2+n3/3
#saida : 
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:41:46)
-- CODE: 
print()
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+n2+n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:42:08)
-- CODE: 
print()
n1 = 5
n2 = 4
n3 = 3
#media
media = n1+n2+n3/3
#saida : 
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:41:39)
-- CODE: 
print("")
n1 = 5
n2 = 4
n3 = 3
#media
m = n1+n2+n3/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 03:44:51)
-- CODE: 
n1 = 5
n2 = 4
n3 = 3
#media
m = (n1+n2+n3)/3
#saida : 
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 03:42:10)
-- CODE: 
print()
n1 = 5
n2 = 4
n3 = 3
#media
media = n1+n2+n3/3
#saida : 
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
